--- a/views/admin/partials/adminleft.ejs
+++ b/views/admin/partials/adminleft.ejs
@@ -14,6 +14,17 @@
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-book"></i>
+                        <span>Quản lý loại sản phẩm</span>
+                    </a>
+                    <ul class="sub">
+						<li><a href="/admin/loaisanpham">Loại sản phẩm</a></li>
+						
+                    </ul>
+                </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-book"></i>
                         <span>Quản lý sản phẩm</span>
                     </a>
                     <ul class="sub">
