--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -3152,4 +3152,10 @@ div#graph1, div#graph4, div#graph5, div#graph6, div#graph7, div#graph8, div#grap
 .chart_agile_bottom {
     padding: 0;
 }
+.hidden{
+    display: none;
+}
+.canhan{
+    background:#eb088c;
+}
 }
