--- a/views/admin/adnhanvien/updatenv.ejs
+++ b/views/admin/adnhanvien/updatenv.ejs
@@ -18,38 +18,48 @@
                                 <div class="table-agile-info">
                                     <div class="panel panel-default">
                                         <div class="panel-heading">
-                                            THÊM NHÂN VIÊN
+                                            CẬP NHẬT NHÂN VIÊN
                                         </div>
-                                        <form method="POST" action="/admin/nhanvien/createnhanvien" id="formAddProduct">
+                                        <form method="POST" action="/admin/nhanvien/updatenhanvien" id="formAddProduct">
+                                            <label>Mã nhân viên</label>
+                                            <input type="text" class="form-control" name="manv"
+                                                placeholder="Tên nhân viên" value="<%= nhanvien.manv%>" readonly><br>
                                             <label>Tên nhân viên</label>
                                             <input type="text" class="form-control" name="tennv"
-                                                placeholder="Tên nhân viên"><br>
+                                                placeholder="Tên nhân viên" value="<%= nhanvien.tennv %>"><br>
                                             <label>Email</label>
-                                            <input type="email" class="form-control" name="email">
+                                            <input type="email" class="form-control" name="email" value="<%= nhanvien.email %>">
                                             <br>
                                             <label>Mật khẩu</label>
-                                            <input type="password" class="form-control" name="matkhau">
+                                            <input type="password" class="form-control" name="matkhau" value="<%= nhanvien.matkhau %>">
                                             <br>
                                             <label>Số điện thoại</label>
-                                            <input type="text" class="form-control" name="sodienthoai">
+                                            <input type="text" class="form-control" name="sodienthoai" value="<%= nhanvien.sodienthoai %>">
                                             <br>
                                             <label>Trạng thái</label> <br />
+                                            <% if(nhanvien.trangthai){ %>
                                             <input name="trangthai" type="radio" value="1" checked="checked">
                                               Hoạt động
                                             <input name="trangthai" type="radio" value="0"> Không hoạt động <br />
+                                            <br/>
+                                            <% } else { %>
+                                            <input name="trangthai" type="radio" value="1">
+                                              Hoạt động
+                                            <input name="trangthai" type="radio" value="0" checked="checked"> Không hoạt động <br />
                                             <br />
-                                      
+                                            <% } %>
                                             <label>Quản lý</label>
                                             <select name="id_maloainv" class="form-control">
                                                 <option value="">------Chọn loại quản lý-------</option>
                                                 <% for(let i=0; i < loaiNvs.length; i++) {%>
-                                                    <option value="<%= loaiNvs[i].maloainv %>">
+                                                    <option value="<%= loaiNvs[i].maloainv %>"
+                                                        <%=loaiNvs[i].maloainv==nhanvien.id_maloainv 
+                                                        ? 'selected' : '' %> >
                                                         <%= loaiNvs[i].tenloainv %>
                                                     </option>
                                                     <% } %>
                                             </select><br>
-                                            
-                                            <input type="submit" name="themnhanvien" value="Thêm nhân viên"
+                                            <input type="submit" name="capnhatnhanvien" value="Cập nhật nhân viên"
                                                 class="btn btn-primary"><br/>
                                             <br/>
                                             <a href="admin/nhanvien">Quay lại?</a>
